# zim-dsp

./: .gitignore  CLAUDE.md  Cargo.toml  DESIGN_NOTES.md  Makefile  README.md  clippy.toml  debug_expansion.zim  rustfmt.toml  test_graph_repl.txt  test_manual_gate.sh  vi_mode_demo.txt
.github/workflows/: ci.yml
docs/: DESIGN.md  module_roadmap.md
examples/: 01_basic_sine.zim  02_waveforms.zim  03_amplitude_control.zim  04_filter_modulation.zim  05_complex_routing.zim  06_audio_rate_modulation.zim  07_lfo_triggered_envelope.zim  12_white_noise_test.zim  13_noise_colors.zim  README.md  basic_patch.zim  debug_slew_generator.rs  envelope_test.zim  envelope_vca.zim  filter_test.zim  graph_test.rs  hihat_clock.zim  pluck.zim  sample_hold_test.zim  simple_debug.rs  simple_test.zim  subtractive_patch.zim  test.zim  test_repl.zim  test_slew_behavior.rs  test_stereo_mixer.rs  waveforms.zim
examples/complex/: introspection_demo.rs
examples/envelope/: amplitude_control.zim  envelope_shapes.zim  lfo_triggered_envelope.zim
examples/filter/: wind_effect.zim
examples/manual_gate/: amplitude_control_manual.zim  manual_gate.zim
examples/mixer/: basic_mix.zim  layered_sounds.zim  polyrhythm.zim  stereo_mixing.zim
examples/noise/: brown_noise.zim  (+3 more)
isolated_test/: isolated_patch.zim
src/: embedded_stdlib.rs  engine.rs  graph.rs  graph_engine.rs  graph_modules.rs  lib.rs  main.rs  module_loader.rs  module_resolver.rs  modules.rs  observability.rs  parser.rs  slew_tests.rs  test_framework.rs  user_modules.rs
stdlib/: uncertainty.zim
usermodules/: simple_gain.zim
(+25 files in other folders)
