[package]
name = "zim-dsp"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Ed Sweeney <ed@onextent.com>"]
description = "Text-based modular synthesizer environment"
repository = "https://github.com/navicore/zim-dsp"
keywords = ["audio", "synthesizer", "modular", "dsp", "music"]
categories = ["multimedia::audio", "command-line-utilities"]

[lib]
name = "zim_dsp"
path = "src/lib.rs"

[[bin]]
name = "zim-dsp"
path = "src/main.rs"

[dependencies]
fundsp = { version = "0.18", default-features = false, features = ["std"] }
cpal = "0.15"
anyhow = "1.0"
rustyline = "14.0"
dirs = "5.0"

[[example]]
name = "graph_test"
path = "examples/graph_test.rs"